# python-package-repo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
src/minipkg/: __init__.py  greetings.py
src/python_package_repo/: __init__.py  main.py
tests/: test_greetings.py
