[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "andreykarinskiy/python-package-repo"
version = "0.1.0"
description = "A simple example package demonstrating a src layout."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Andrey Karinskiy" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2.1",
    "twine>=5.1.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["python_package_repo*"]


